// Vitest Snapshot v1

exports[`presentation > Should not render 1`] = `
"<h2>Slide 1</h2>
<p>A paragraph with some text and a <a href=\\"https://mrhope.site\\">link</a></p>
<hr>
<h2>Slide 2</h2>
<ul>
<li>Item 1</li>
<li>Item 2</li>
</ul>
<hr>
<h2>Slide 3.1</h2>
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
<p>--</p>
<h2>Slide 3.2</h2>
<p>$$
J(\\\\theta_0,\\\\theta_1) = \\\\sum_{i=0}
$$</p>
"
`;

exports[`presentation > Should not render 2`] = `
"<p>@slidestar</p>
<h2>Slide 1</h2>
<p>A paragraph with some text and a <a href=\\"https://mrhope.site\\">link</a></p>
<hr>
<h2>Slide 2</h2>
<ul>
<li>Item 1</li>
<li>Item 2</li>
</ul>
<hr>
<h2>Slide 3.1</h2>
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
<p>--</p>
<h2>Slide 3.2</h2>
<p>$$
J(\\\\theta_0,\\\\theta_1) = \\\\sum_{i=0}
$$</p>
<p>@slideend</p>
"
`;

exports[`presentation > Should render 1`] = `"<Presentation id=\\"presentation-0\\" code=\\"eNpVjc0KwjAQhO/7FAvtoQX7pzelB4969WilDXYx0aYNyYqC+O4mUJDeho9vZiCK8DSonrAC2KMRVtysMBJfiiW6SRMyvRnF2KPA86DGxyWRzMZti0JbORnKnWJKAbIsg//c2gM8MGk/PIeAFs4m96dd190dXKfR+RessdoFFNSF6ctxDMekYUks2nI1hyr1ncY9dftRdfkN0g8aMTop\\" theme=\\"auto\\"></Presentation>"`;
